--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 anyhow = "1.0.86"
 iced-x86 = { version = "1.21.0", features = ["code_asm"] }
 nix = { version = "0.29.0", features = ["process", "ptrace"] }
+once_cell = "1.19.0"
+regex = "1.10.5"
