feat: implement function searcher in rust
add the "elf" crate to do this easily; writing a homemade elf parser would be fun but I'm too lazy for that

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+elf = "0.7.4"
 iced-x86 = { version = "1.21.0", features = ["code_asm"] }
 nix = { version = "0.29.0", features = ["process", "ptrace"] }
 once_cell = "1.19.0"
