--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ anyhow = "1.0.86"
 clap = { version = "4.5.8", features = ["derive"] }
 elf = "0.7.4"
 iced-x86 = { version = "1.21.0", features = ["code_asm"] }
+lazy_static = "1.5.0"
 nix = { version = "0.29.0", features = ["process", "ptrace"] }
-once_cell = "1.19.0"
 regex = "1.10.5"
